Auto resize box when content added, stop overflowing text in capitalisation chart

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_circle-legend.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_circle-legend.sass
@@ -3,10 +3,10 @@
 
 .chart-table.chart-table-capitalisation
     padding: 20px 32px
-    max-height: 470px
+    max-height: auto
     @include breakpoint(desktop, up)
         padding: 20px 50px
-        overflow-x: auto
+        overflow-x: hidden
     @include breakpoint(tablet, down)
         overflow-x: auto
 
